# WolfVision

./: CMakeLists.txt
base/: wolfvision.cpp  wolfvision.hpp
device/: device.hpp
device/camera/: abstract_video_capture.hpp  camera.cpp  camera.hpp
device/can_bus/: abstract_can.hpp  can_bus.cpp
device/serial/: abstract_serial.hpp  serial_port.cpp  serial_port.hpp
module/: module.hpp
module/classification/: classification.cpp  classification.hpp  yolov4.cpp  yolov4.hpp
module/classification/abstract/: mnist.hpp  yolov4.hpp
module/compensate/: compensate.cpp  compensate.hpp
module/compensate/abstract/: gravity.hpp  velocity.hpp
module/filter/: kalman.cpp  kalman.hpp
module/locate/: pnp.cpp  pnp.hpp
module/predict/: predict.cpp  predict.hpp
module/predict/abstract/: kalman_filter.hpp
module/roi/: roi.cpp  roi.hpp
types/: types.hpp
types/basic/: ring_buffer_types.hpp
types/device/: camera_types.hpp  can_bus_types.hpp  serial_types.hpp
types/module/: classification_types.hpp  compensate_types.hpp  filter_types.hpp  locate_types.hpp  predict_types.hpp  roi_types.hpp  target_types.hpp
utils/: crc_8_maxim.hpp  filter_2_serial.hpp  kalman_2_serial.hpp  locate_2_serial.hpp  target_2_roi.hpp  target_2_serial.hpp  types_init.hpp  utils.hpp
